--- a/frontend/src/components/organisms/navbar/navbar.module.scss
+++ b/frontend/src/components/organisms/navbar/navbar.module.scss
@@ -1,4 +1,4 @@
-@import "../../styles/all.module.scss";
+@import "../../../styles/all.module.scss";
 .navbar {
   header {
     background-color: $white;
