--- a/frontend/src/styles/color.module.scss
+++ b/frontend/src/styles/color.module.scss
@@ -5,6 +5,7 @@
 $softPrimary: #46df81;
 $primary: #00b207;
 $hardPrimary: #2c742f;
+$deepPrimary: #006703;
 $warning: #ff8a00;
 $danger: #ea4b48;
 $white: #ffffff;
