--- a/frontend/src/components/organisms/productCart/productCart.module.scss
+++ b/frontend/src/components/organisms/productCart/productCart.module.scss
@@ -16,6 +16,9 @@
     .productCart__overlay {
       opacity: 1;
     }
+    .productCart__title {
+      color: $primary;
+    }
   }
   &__header {
     max-height: 200px;
@@ -103,12 +106,12 @@
   }
   &__overlay {
     width: 100%;
-    height: 100%;
+    height: 48%;
     background-color: rgba(0, 0, 0, 0.4);
     position: absolute;
     top: 0;
     left: 0;
-    border-radius: 16px;
+    border-radius: 16px 16px 0px 0px;
     opacity: 0;
     transition: 0.3s;
   }
