--- a/frontend/src/components/organisms/wishlist/wishlist.module.scss
+++ b/frontend/src/components/organisms/wishlist/wishlist.module.scss
@@ -64,7 +64,8 @@
     text-decoration: line-through;
   }
 
-  &__mediumScreen {
+  // For Responsive
+  &__largeScreen {
     .wishList__productName {
       font-size: 10px;
     }
