--- a/frontend/src/components/molecules/productCart/productCart.module.scss
+++ b/frontend/src/components/molecules/productCart/productCart.module.scss
@@ -2,11 +2,13 @@
 .productCart {
   border: 1px solid $gray1;
   max-width: 290px;
-  height: auto;
+  height: 100%;
   border-radius: 16px;
   box-shadow: 0px 2px 30px 0px rgba(0, 0, 0, 0.1);
   transition: 0.3s;
-  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   cursor: pointer;
   &:hover {
     border: 1px solid $hardPrimary;
@@ -22,11 +24,14 @@
   }
   &__header {
     max-height: 200px;
+    position: relative;
   }
   &__image {
+    aspect-ratio: 16/9;
     width: 100%;
     height: auto;
-    aspect-ratio: 16/11;
+    object-fit: cover;
+    object-position: center;
     border-radius: 16px 16px 0px 0px;
   }
   &__content {
@@ -54,10 +59,12 @@
     line-height: 150%;
   }
   &__footer {
+    width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0px 30px 22px 30px;
+    padding: 0px 12px 22px 12px;
+    margin-top: auto;
   }
   &__currencyIcon {
     width: 18px;
@@ -96,17 +103,9 @@
     line-height: 150%;
     text-decoration: line-through;
   }
-  &__hoverIcon {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    transition: 0.3s;
-    opacity: 0;
-  }
   &__overlay {
     width: 100%;
-    height: 48%;
+    height: 96%;
     background-color: rgba(0, 0, 0, 0.4);
     position: absolute;
     top: 0;
@@ -115,9 +114,17 @@
     opacity: 0;
     transition: 0.3s;
   }
+  &__hoverIcon {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    transition: 0.3s;
+    opacity: 0;
+  }
 
   // For Small Screen;
-  &__smallScreen {
+  &__mdScreen {
     .productCart__title {
       font-size: 10px;
     }
@@ -128,6 +135,12 @@
       padding: 0px 10px 22px 10px;
     }
     .productCart__price {
+      font-size: 12px;
+    }
+    .productCart__discountPrice {
+      font-size: 12px;
+    }
+    .productCart__priceCondition {
       font-size: 12px;
     }
     .productCart__currencyIcon {
