--- a/frontend/src/components/organisms/newsLetter/newsletter.module.scss
+++ b/frontend/src/components/organisms/newsLetter/newsletter.module.scss
@@ -1,39 +1,31 @@
 @import "../../../styles/all.module.scss";
 .newsLetter {
-  width: 872px;
-  height: 400px;
-  padding: 10px;
-  background-color: $white;
-  border-radius: 8px;
-  box-shadow: 0px 12px 48px 0px rgba(0, 0, 0, 0.12);
-  position: relative;
-  &__leftContent {
-    padding-right: 40px;
-  }
-  &__rightContent {
-    padding: 50px 30px;
-  }
-  &__heading {
+  max-width: 100%;
+  &__head {
     color: $gray5;
-    text-align: center;
-    font-size: 40px;
+    font-size: 24px;
     font-style: normal;
     font-weight: 600;
-    line-height: 120%;
-    margin-bottom: 12px;
-  }
-  &__para {
-    color: $gray3;
+    line-height: 150%; /* 36px */
     text-align: center;
-    font-size: 16px;
+  }
+  &__text {
+    color: $gray4;
+    font-size: 14px;
     font-style: normal;
     font-weight: 400;
-    line-height: 150%;
-    margin-bottom: 24px;
+    line-height: 150%; /* 21px */
+    text-align: center;
   }
-  &__CloseIcon {
-    position: absolute;
-    top: 8px;
-    right: 8px;
+
+  //   For Responsive
+
+  &__mdScreen {
+    .newsLetter__head {
+      text-align: left;
+    }
+    .newsLetter__text {
+      text-align: left;
+    }
   }
 }
