--- a/frontend/src/components/organisms/quickView/quickView.module.scss
+++ b/frontend/src/components/organisms/quickView/quickView.module.scss
@@ -2,10 +2,15 @@
 .quickView {
   width: 100%;
   height: auto;
-  padding: 40px;
+  padding: 20px;
   background-color: $white;
   display: flex;
   flex-direction: row;
+  &__crossIcon {
+    position: absolute;
+    top: 8px;
+    right: 8px;
+  }
   &__productTitle {
     display: flex;
     align-items: center;
@@ -46,7 +51,7 @@
     font-style: normal;
     font-weight: 500;
     line-height: 150%;
-    margin-right: 12px;
+    margin-right: 4px;
   }
   &__discount {
     color: $danger;
@@ -57,6 +62,7 @@
     line-height: 150%;
     border-radius: 4px;
     background: rgba(234, 75, 72, 0.1);
+    margin-left: 15px;
   }
   &__description {
     color: $gray3;
