update quickView dialog box and store

--- a/frontend/src/components/organisms/carousel/quickViewSlider.module.scss
+++ b/frontend/src/components/organisms/carousel/quickViewSlider.module.scss
@@ -1,8 +1,7 @@
 .slider {
   width: 100%;
-  height: auto;
-  &__imageWrapper {
-    width: 100%;
-    height: auto;
+  min-height: 450px;
+  &__mainImage img {
+    border-radius: 8px;
   }
 }
