--- a/frontend/src/components/molecules/categoryItem/categoryItem.module.scss
+++ b/frontend/src/components/molecules/categoryItem/categoryItem.module.scss
@@ -8,7 +8,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 20px 5px;
+  padding: 5px 5px 20px 5px;
   margin: 2px 0px;
   border-radius: 10px;
   border: 1px solid $gray1;
@@ -16,6 +16,7 @@
   background: $white;
   cursor: pointer;
   transition: 0.3s ease-in;
+  overflow: hidden;
   &:hover {
     border-radius: 5px;
     border: 1px solid $hardPrimary;
@@ -23,9 +24,8 @@
   }
 
   &__img {
-    aspect-ratio: 16/9;
-    width: 100%;
-    height: auto;
+    width: auto;
+    height: 100px;
     object-fit: cover;
     object-position: center;
     border-radius: 10px;
@@ -42,7 +42,7 @@
   // For Responsive
   &__smScreen {
     .category__text {
-      font-size: 14px;
+      font-size: 16px;
     }
   }
 }
