--- a/frontend/src/styles/ovverrideMuiStyle.css
+++ b/frontend/src/styles/ovverrideMuiStyle.css
@@ -201,7 +201,7 @@
 
 /* This styles for QuickView Carousel */
 .quickViewDialog .css-1t1j96h-MuiPaper-root-MuiDialog-paper {
-  max-width: 1200px;
+  max-width: 1250px;
   height: calc(100% - 30px);
 }
 .quickView .carousel-slider img {
@@ -227,6 +227,9 @@
 .quickView .carousel .thumbs-wrapper li img {
   border-radius: 6px;
   border: 3px solid transparent;
+  width: 100%;
+  height: 80px;
+  object-fit: cover;
 }
 .quickView .carousel .control-prev.control-arrow::before {
   border-right: 8px solid #000000;
