code refactoring and remove easy-peasy store

--- a/frontend/src/components/atoms/stockStatus/stock.module.scss
+++ b/frontend/src/components/atoms/stockStatus/stock.module.scss
@@ -1,4 +1,4 @@
-@import "../../../styles/all.module.scss";
+@import "@/styles/global.module.scss";
 .inStock {
   padding: 4px 8px;
   color: $deepPrimary;
