--- a/frontend/src/components/organisms/header/header.module.scss
+++ b/frontend/src/components/organisms/header/header.module.scss
@@ -1,4 +1,4 @@
-@import "../../../styles/all.module.scss";
+@import "@/styles/global.module.scss";
 .navbar {
   header {
     background-color: $white;
