--- a/frontend/src/components/organisms/login/login.module.scss
+++ b/frontend/src/components/organisms/login/login.module.scss
@@ -1,4 +1,4 @@
-@import "../../../styles/all.module.scss";
+@import "@/styles/global.module.scss";
 .login {
   max-width: 520px;
   padding: 24px 24px 32px 24px;
