--- a/frontend/src/components/organisms/newsLetterDialog/newsletter.module.scss
+++ b/frontend/src/components/organisms/newsLetterDialog/newsletter.module.scss
@@ -1,4 +1,4 @@
-@import "../../../styles/all.module.scss";
+@import "@/styles/global.module.scss";
 .newsLetter {
   width: 872px;
   height: 400px;
