--- a/frontend/src/components/atoms/textField/textField.module.scss
+++ b/frontend/src/components/atoms/textField/textField.module.scss
@@ -1,13 +1,13 @@
-@import "../../../styles/all.module.scss";
+@import "@/styles/global.module.scss";
 .textField {
   width: 100%;
   height: auto;
   padding: 10px 20px;
   border-radius: 25px;
-  border: 1px solid $gray2;
+  border: 1px solid $gray-300;
   outline: none;
   font-size: 0.9rem;
-  color: $gray5;
+  color: $gray-1000;
   transition: 0.3s;
   &:hover {
     border: 1px solid $gray5;
