--- a/frontend/src/components/molecules/discountBannerInfo/bannerInfo.module.scss
+++ b/frontend/src/components/molecules/discountBannerInfo/bannerInfo.module.scss
@@ -1,4 +1,4 @@
-@import "../../../styles/all.module.scss";
+@import "@/styles/global.module.scss";
 .info {
   display: flex;
   flex-direction: column;
