--- a/frontend/src/components/molecules/location/location.module.scss
+++ b/frontend/src/components/molecules/location/location.module.scss
@@ -1,4 +1,4 @@
-@import "../../../styles/all.module.scss";
+@import "@/styles/global.module.scss";
 .location {
   position: relative;
   border: none;
