--- a/frontend/src/components/molecules/newsCart/newsCart.module.scss
+++ b/frontend/src/components/molecules/newsCart/newsCart.module.scss
@@ -1,4 +1,4 @@
-@import "../../../styles/all.module.scss";
+@import "@/styles/global.module.scss";
 .newsCart {
   width: 100%;
   height: 100%;
@@ -30,15 +30,15 @@
     border-radius: 4px;
   }
   &__tarikh {
-    color: $gray5;
+    color: $gray-1000;
     font-size: 20px;
     font-style: normal;
     font-weight: 500;
     line-height: 150%; /* 30px */
   }
   &__month {
-    color: $gray3;
-    font-size: 12px;
+    color: $gray-600;
+    font-size: $fs-xxs;
     font-style: normal;
     font-weight: 500;
     line-height: 100%; /* 12px */
@@ -62,7 +62,7 @@
   }
   &__infoIcon {
     font-size: 14px;
-    color: $gray3;
+    color: $gray-400;
     margin-right: 4px;
   }
   &__infoAdminIcon {
@@ -72,8 +72,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    color: $gray4;
-    font-size: 12px;
+    color: $gray-800;
+    font-size: $fs-xxs;
     font-style: normal;
     font-weight: 400;
     line-height: 150%; /* 21px */
@@ -83,8 +83,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    color: $gray4;
-    font-size: 12px;
+    color: $gray-800;
+    font-size: $fs-xxs;
     font-style: normal;
     font-weight: 400;
     line-height: 150%; /* 21px */
@@ -94,15 +94,15 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    color: $gray4;
-    font-size: 12px;
+    color: $gray-800;
+    font-size: $fs-xxs;
     font-style: normal;
     font-weight: 400;
     line-height: 150%; /* 21px */
   }
   &__title {
     color: $hardPrimary;
-    font-size: 14px;
+    font-size: $fs-xs;
     font-style: normal;
     font-weight: 500;
     line-height: 150%; /* 27px */
@@ -112,7 +112,7 @@
     padding: 0px 24px 24px 24px;
   }
 
-  &__smScreen {
+  @include smScreen {
     .newsCart__infoIcon {
       font-size: 10px;
     }
@@ -130,7 +130,7 @@
     }
   }
 
-  &__lgScreen {
+  @include mdScreen {
     .newsCart__infoIcon {
       font-size: 14px;
     }
@@ -142,6 +142,26 @@
     }
     .newsCart__comment {
       font-size: 12px;
+    }
+    .newsCart__title {
+      font-size: 18px;
+    }
+    .newsCart__img {
+      height: 300px;
+    }
+  }
+  @include lgScreen {
+    .newsCart__infoIcon {
+      font-size: 14px;
+    }
+    .newsCart__tag {
+      font-size: 14px;
+    }
+    .newsCart__admin {
+      font-size: 14px;
+    }
+    .newsCart__comment {
+      font-size: 14px;
     }
     .newsCart__title {
       font-size: 18px;
