--- a/frontend/src/components/molecules/productCart/productCart.module.scss
+++ b/frontend/src/components/molecules/productCart/productCart.module.scss
@@ -1,15 +1,15 @@
-@import "../../../styles/all.module.scss";
+@import "@/styles/global.module.scss";
 .productCart {
   border: 1px solid $gray1;
   max-width: 290px;
-  height: 100%;
+  height: auto;
   border-radius: 16px;
   box-shadow: 0px 2px 30px 0px rgba(0, 0, 0, 0.1);
   transition: 0.3s;
   display: flex;
   flex-direction: column;
   align-items: center;
-  cursor: pointer;
+
   &:hover {
     border: 1px solid $hardPrimary;
     .productCart__hoverIcon {
@@ -34,6 +34,9 @@
     object-position: center;
     border-radius: 16px 16px 0px 0px;
   }
+  &__link {
+    text-decoration: none;
+  }
   &__content {
     width: 100%;
     display: flex;
@@ -41,6 +44,7 @@
     align-items: center;
     flex-direction: column;
     padding: 12px;
+    cursor: pointer;
   }
   &__title {
     color: $gray5;
@@ -67,7 +71,7 @@
     margin-top: auto;
   }
   &__currencyIcon {
-    font-size: 18px;
+    font-size: 14px;
     margin-right: 2px;
   }
   &__discountPrice {
@@ -75,7 +79,7 @@
     justify-content: center;
     align-items: center;
     color: $gray5;
-    font-size: 16px;
+    font-size: 12px;
     font-style: normal;
     font-weight: 500;
     line-height: 150%;
@@ -86,7 +90,7 @@
     justify-content: center;
     align-items: center;
     color: $gray5;
-    font-size: 16px;
+    font-size: 12px;
     font-style: normal;
     font-weight: 500;
     line-height: 150%;
@@ -96,7 +100,7 @@
     justify-content: center;
     align-items: center;
     color: $gray2;
-    font-size: 16px;
+    font-size: 12px;
     font-style: normal;
     font-weight: 500;
     line-height: 150%;
