--- a/frontend/src/components/molecules/productCartIcons/productIcons.module.scss
+++ b/frontend/src/components/molecules/productCartIcons/productIcons.module.scss
@@ -1,4 +1,4 @@
-@import "../../../styles/all.module.scss";
+@import "@/styles/global.module.scss";
 .productIcons {
   display: flex;
   justify-content: center;
