--- a/frontend/src/components/molecules/socialIcons/socialIcon.module.scss
+++ b/frontend/src/components/molecules/socialIcons/socialIcon.module.scss
@@ -1,4 +1,4 @@
-@import "../../../styles/all.module.scss";
+@import "@/styles/global.module.scss";
 .socialIcons {
   display: flex;
   flex-direction: row;
