--- a/frontend/src/components/organisms/featuredService/featured.module.scss
+++ b/frontend/src/components/organisms/featuredService/featured.module.scss
@@ -1,26 +1,22 @@
-@import "../../../styles/all.module.scss";
+@import "@/styles/global.module.scss";
 .featured {
   width: 100%;
   height: auto;
-  padding: 20px 10px;
+  padding: 20px 16px;
   background-color: $white;
   box-shadow: 0px 8px 40px 0px rgba(0, 38, 3, 0.08);
   border-radius: 8px;
+  margin-bottom: 25px;
 
   &__gridBox {
-    display: flex;
-    align-items: center;
     margin-bottom: 25px;
-    &:nth-child(3) {
-      margin-bottom: 0;
-    }
     &:nth-child(4) {
       margin-bottom: 0;
     }
   }
 
   // For Responsive
-  &__largeScreen {
+  @include lgScreen {
     padding: 40px 20px;
     .featured__gridBox {
       margin-bottom: 0px;
