--- a/frontend/src/components/organisms/homePageBanner/discountBanner/discountBanner.module.scss
+++ b/frontend/src/components/organisms/homePageBanner/discountBanner/discountBanner.module.scss
@@ -1,3 +1,4 @@
+@import "@/styles/global.module.scss";
 .discountBanner {
   width: 100%;
   height: 360px;
@@ -13,7 +14,7 @@
   }
 
   //  For Responsive
-  &__smScreen {
+  @include downSmScreen {
     justify-content: flex-start;
     .discountBanner__content {
       padding: 10px;
