--- a/frontend/src/components/organisms/latestNews/latestNews.module.scss
+++ b/frontend/src/components/organisms/latestNews/latestNews.module.scss
@@ -1,19 +1,21 @@
-@import "../../../styles/all.module.scss";
+@import "@/styles/global.module.scss";
 .news {
   &__headText {
-    color: $gray5;
-    text-align: left;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 600;
-    line-height: 120%; /* 38.4px */
+    @extend %heading-05-600;
+    color: $gray-1000;
     margin-bottom: 32px;
   }
 
-  //   For Responsive
-  &__smScreen {
-    .news__headText {
-      font-size: 32px;
+  // For Responsive
+  @include downMdScreen {
+    &__headText {
+      font-size: $fs-xxxl;
+    }
+  }
+
+  @include downSmScreen {
+    &__headText {
+      font-size: $fs-md;
     }
   }
 }
