--- a/frontend/src/components/organisms/newsLetter/newsletter.module.scss
+++ b/frontend/src/components/organisms/newsLetter/newsletter.module.scss
@@ -1,26 +1,20 @@
-@import "../../../styles/all.module.scss";
+@import "@/styles/global.module.scss";
 .newsLetter {
   max-width: 100%;
   &__head {
-    color: $gray5;
-    font-size: 24px;
-    font-style: normal;
-    font-weight: 600;
-    line-height: 150%; /* 36px */
+    @extend %body-xxl-600;
+    color: $gray-1000;
     text-align: center;
   }
   &__text {
-    color: $gray4;
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 150%; /* 21px */
+    @extend %body-sm-400;
+    color: $gray-500;
     text-align: center;
   }
 
   //   For Responsive
 
-  &__mdScreen {
+  @include mdScreen {
     .newsLetter__head {
       text-align: left;
     }
