--- a/frontend/src/components/organisms/products/featured/featured.module.scss
+++ b/frontend/src/components/organisms/products/featured/featured.module.scss
@@ -1,4 +1,4 @@
-@import "../../../../styles/all.module.scss";
+@import "@/styles/global.module.scss";
 .featured {
   &__head {
     display: flex;
@@ -7,17 +7,20 @@
     margin-bottom: 32px;
   }
   &__headText {
-    color: $gray5;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 600;
-    line-height: 120%;
+    @extend %heading-05-600;
+    color: $gray-1000;
   }
 
   // For Responsive
-  &__smScreen {
-    .featured__headText {
-      font-size: 32px;
+  @include downMdScreen {
+    &__headText {
+      font-size: $fs-xxxl;
+    }
+  }
+
+  @include downSmScreen {
+    &__headText {
+      font-size: $fs-md;
     }
   }
 }
